# Virtual-bms-driver-framework

./: .gitignore  CMakeLists.txt  README.md
include/: BitUtils.hpp  DeviceController.hpp  DriverTypes.hpp  RegisterMap.hpp  VirtualBatteryMonitor.hpp
kernel/: Makefile  vbms_drv.c  vbms_ioctl.h
src/: DeviceController.cpp  DriverTypes.cpp  RegisterMap.cpp  VirtualBatteryMonitor.cpp  main.cpp
tests/: test_main.cpp
userspace/: vbms_cli  vbms_cli.c
